mydidata/static/css/mydidata.css
/* GLOBAL STYLES
-------------------------------------------------- */
/* Padding below the footer and lighter body text */

main {
    padding-top: 2rem;
    padding-bottom: 5rem;
    color: #5a5a5a;
  }
  
  .black-overlay {
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.4);
    position: absolute; 

  }
#content-container {

  margin-top: 20px;

}
  
  /* CUSTOMIZE THE CAROUSEL
  -------------------------------------------------- */
  
  /* Carousel base class */
  .carousel {
    margin-bottom: 4rem;    
  }
  /* Since positioning the image, we need to help out the caption */
  .carousel-caption {
    bottom: -1rem;
    z-index: 10;
    min-width: 80%;
  }
  
  /* Declare heights because of positioning of img element */
  .carousel-item {
    /* height: 32rem; */
    max-height: 32rem;
    background-color: #777;
    position: relative !important;
  }
  .carousel-item > img {
    /* position: absolute; */
    object-fit: cover !important;
    min-width: 100%;
    height: auto;
    max-height: 32rem;
    width: auto;
    max-width: 100%;
    /* max-height: 100%; */
    /* width: auto;
    min-width: 100%;
    object-fit: cover !important; 
    height: auto;
    max-width: 100%;
    max-height: 100%; */
  }
  .carousel-control-next,
  .carousel-control-prev {
      filter: invert(100%);
  }  /* MARKETING CONTENT
  -------------------------------------------------- */
  
  /* Center align the text within the three columns below the carousel */
  .marketing .col-lg-4 {
    margin-bottom: 1.5rem;
    text-align: center;
  }
  .marketing h2 {
    font-weight: 400;
  }
  .marketing .col-lg-4 p {
    margin-right: .75rem;
    margin-left: .75rem;
  }
  
  
  /* Featurettes
  ------------------------- */
  
  .featurette-divider {
    margin: 2rem 0; /* Space out the Bootstrap <hr> more */
  }
  
  /* Thin out the marketing headings */
  .featurette-heading {
    font-weight: 300;
    line-height: 1;
    letter-spacing: -.05rem;
  }
  
  
  /* RESPONSIVE CSS
  -------------------------------------------------- */
  
  @media (min-width: 40em) {
    /* Bump up size of carousel content */
    .carousel-caption p {
      margin-bottom: 1.25rem;
      font-size: 1.25rem;
      line-height: 1.4;
    }
  
    .featurette-heading {
      font-size: 50px;
    }
  }
  
  @media (min-width: 62em) {
    .featurette-heading {
      margin-top: 7rem;
    }
  }

